apps/whoami/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  labels:
    app.kubernetes.io/name: whoami
spec:
  ingressClassName: traefik
  rules:
    - host: some_placeholder_for_host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: http
